tests/snapshots/parse_compound__snapshot_show_plans.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause:
    ShowPlans:
      trace_id: abc123
  scope: ~
  time_range: ~
  time_basis: ~
  conditions: ~
  facet: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
