tests/snapshots/parse_compound__snapshot_show_plans_scoped.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause:
    ShowPlans:
      trace_id: ~
  scope:
    robot:
      Single: robot_42
    version: ~
    environment: ~
    session: ~
  time_range:
    Since:
      Relative:
        amount: 1
        unit: day
  time_basis: ~
  conditions: ~
  facet: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
