tests/snapshots/parse_compound__snapshot_show_recording.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause: ShowRecording
  robot_scope: ~
  time_range:
    Since:
      Relative:
        amount: 1
        unit: days
  time_basis: ~
  conditions: ~
  facet: ~
  order_by: ~
  limit: ~
  output_format: ~
  baseline: ~
