tests/snapshots/parse_compound__snapshot_show_span_summary.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause: ShowSpanSummary
  scope: ~
  time_range:
    Since:
      Relative:
        amount: 1
        unit: hour
  time_basis: ~
  conditions: ~
  facet: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
