tests/snapshots/parse_compound__snapshot_show_topics_where.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause: ShowTopics
  scope: ~
  time_range:
    Since:
      Relative:
        amount: 30
        unit: minutes
  time_basis: ~
  conditions:
    Like:
      expr:
        Field: topic_name
      pattern: /camera%
  facet: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
