tests/snapshots/parse_compound__snapshot_trace.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause:
    Trace:
      trace_id: abc123def456
  scope: ~
  time_range: ~
  time_basis: ~
  conditions: ~
  facet: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
